--- a/.eslintrc
+++ b/.eslintrc
@@ -1,38 +1,33 @@
 {
-  "parser": "babel-eslint",
-  "env": {
-    "browser": true,
-    "node": true,
-    "jasmine": true
-  },
-  "plugins": [
-    "react"
-  ],
-  "globals": {
-    "jest": false
-  },
-  "ecmaFeatures": {
-    "jsx": true,
-    "globalReturn": false
-  },
-  "rules": {
-    "no-underscore-dangle": 0,
-    "no-use-before-define": 0,
-    "quotes": [2, "single"],
-    "comma-dangle": 0,
-    "react/jsx-boolean-value": 1,
-    "react/jsx-quotes": 1,
-    "react/jsx-no-undef": 1,
-    "react/jsx-sort-props": 1,
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1,
-    "react/no-did-mount-set-state": 1,
-    "react/no-did-update-set-state": 1,
-    "react/no-multi-comp": 1,
-    "react/no-unknown-property": 1,
-    "react/prop-types": 1,
-    "react/react-in-jsx-scope": 1,
-    "react/self-closing-comp": 1,
-    "react/wrap-multilines": 1
-  }
+    "parser": "babel-eslint",
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "ecmaFeatures": {
+        "classes": true,
+        "jsx": true,
+        "modules": true
+    },
+    "plugins": [
+      "react"
+    ],
+    "rules": {
+      "quotes": [2, "single"],
+      "eol-last": [0],
+      "no-mixed-requires": [0],
+      "no-underscore-dangle": [0],
+      "space-after-keywords": [1, "always"],
+      "no-unused-vars": [2, {"vars": "all", "args": "after-used"}],
+      "react/jsx-uses-react": 2,
+      "react/jsx-no-undef": 2,
+      "react/self-closing-comp": 1,
+      "react/wrap-multilines": 1,
+      "react/jsx-quotes": [1, "single", "avoid-escape"],
+      "react/jsx-uses-vars": 2,
+      "react/react-in-jsx-scope": 2,
+      "react/no-did-mount-set-state": 2,
+      "react/no-did-update-set-state": 2,
+      "react/jsx-curly-spacing": [2, "always"]
+    }
 }
